Visual C++ Runtime static linking when using MSVC compiler

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,14 @@
 cmake_minimum_required(VERSION 3.22)
 project(unnamed-platformer)
 
+include(CMakeDependentOption)
+
+if (CMAKE_BUILD_TYPE STREQUAL "Release" OR CMAKE_BUILD_TYPE STREQUAL "RelWithDebInfo")
+        set(APP_BUILD_RELEASE 1)
+endif()
+
+cmake_dependent_option(MSVC_STATIC_LINK "Static link Visual C++ Runtime" ON "MSVC;APP_BUILD_RELEASE" OFF)
+
 list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")
 include(glfw)
 
@@ -25,3 +33,7 @@ target_include_directories(MyTarget
 target_link_libraries(MyTarget
         PUBLIC ${Vulkan_LIBRARIES}
         PUBLIC ${GLFW_LIBRARIES})
+
+if(MSVC AND MSVC_STATIC_LINK)
+        set_property(TARGET MyTarget PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded")
+endif()
