--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 cmake-build-debug/
 cmake-build-release/
 cmake-build-relwithdebinfo/
+cmake-build-debug-linux/
+cmake-build-release-linux/
+cmake-build-relwithdebinfo-linux/
 
 .idea/
 
